[cq] Migrate code to Inspection-recommended Java 21 APIs (#42)